@@ -1,122 +1,107 @@
 package uk.gov.hmcts.reform.fpl.service;
 
-import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.google.common.collect.ImmutableSet;
+import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import uk.gov.hmcts.reform.fpl.enums.CMOStatus;
 import uk.gov.hmcts.reform.fpl.model.CaseData;
 import uk.gov.hmcts.reform.fpl.model.CaseManagementOrder;
 import uk.gov.hmcts.reform.fpl.model.Direction;
 import uk.gov.hmcts.reform.fpl.model.HearingBooking;
 import uk.gov.hmcts.reform.fpl.model.HearingDateDynamicElement;
+import uk.gov.hmcts.reform.fpl.model.Other;
+import uk.gov.hmcts.reform.fpl.model.Others;
+import uk.gov.hmcts.reform.fpl.model.Respondent;
+import uk.gov.hmcts.reform.fpl.model.RespondentParty;
 import uk.gov.hmcts.reform.fpl.model.common.Element;
-import uk.gov.hmcts.reform.fpl.model.common.Recital;
-import uk.gov.hmcts.reform.fpl.model.common.Schedule;
 import uk.gov.hmcts.reform.fpl.model.common.dynamic.DynamicList;
 import uk.gov.hmcts.reform.fpl.model.common.dynamic.DynamicListElement;
 
 import java.time.LocalDate;
 import java.time.format.FormatStyle;
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
+import java.util.Set;
 import java.util.UUID;
 
 import static java.util.Objects.isNull;
 import static java.util.stream.Collectors.toList;
+import static org.apache.commons.lang3.ObjectUtils.defaultIfNull;
 import static org.apache.commons.lang3.ObjectUtils.isNotEmpty;
 import static uk.gov.hmcts.reform.fpl.enums.DirectionAssignee.ALL_PARTIES;
 import static uk.gov.hmcts.reform.fpl.enums.DirectionAssignee.CAFCASS;
 import static uk.gov.hmcts.reform.fpl.enums.DirectionAssignee.COURT;
 import static uk.gov.hmcts.reform.fpl.enums.DirectionAssignee.LOCAL_AUTHORITY;
+import static uk.gov.hmcts.reform.fpl.enums.DirectionAssignee.OTHERS;
+import static uk.gov.hmcts.reform.fpl.enums.DirectionAssignee.PARENTS_AND_RESPONDENTS;
+import static uk.gov.hmcts.reform.fpl.service.CaseDataExtractionService.EMPTY_PLACEHOLDER;
 
 @Service
+@RequiredArgsConstructor(onConstructor = @__(@Autowired))
 public class DraftCMOService {
     private final ObjectMapper mapper;
     private final DateFormatterService dateFormatterService;
     private final DirectionHelperService directionHelperService;
 
-    @Autowired
-    public DraftCMOService(DateFormatterService dateFormatterService, ObjectMapper mapper,
-                           DirectionHelperService directionHelperService) {
-        this.mapper = mapper;
-        this.dateFormatterService = dateFormatterService;
-        this.directionHelperService = directionHelperService;
-    }
-
     public Map<String, Object> extractIndividualCaseManagementOrderObjects(
-        CaseManagementOrder caseManagementOrder,
-        List<Element<HearingBooking>> hearingDetails) {
+        CaseManagementOrder caseManagementOrder, List<Element<HearingBooking>> hearingDetails) {
 
         if (isNull(caseManagementOrder)) {
             caseManagementOrder = CaseManagementOrder.builder().build();
         }
 
-        HashMap<String, Object> data = new HashMap<>();
-        HashMap<String, Object> reviewCaseManagementOrder = new HashMap<>();
-
-        reviewCaseManagementOrder.put("cmoStatus", caseManagementOrder.getCmoStatus());
-
+        Map<String, Object> data = new HashMap<>();
         data.put("cmoHearingDateList", getHearingDateDynamicList(hearingDetails, caseManagementOrder));
         data.put("schedule", caseManagementOrder.getSchedule());
         data.put("recitals", caseManagementOrder.getRecitals());
-        data.put("reviewCaseManagementOrder", reviewCaseManagementOrder);
 
         return data;
     }
 
-    public CaseManagementOrder prepareCMO(Map<String, Object> caseData) {
-        DynamicList list = mapper.convertValue(caseData.get("cmoHearingDateList"), DynamicList.class);
-        Map<String, Object> reviewCaseManagementOrder = mapper.convertValue(
-            caseData.get("reviewCaseManagementOrder"), new TypeReference<>() {});
-        CMOStatus cmoStatus = mapper.convertValue(reviewCaseManagementOrder.get("cmoStatus"), CMOStatus.class);
-        Schedule schedule = mapper.convertValue(caseData.get("schedule"), Schedule.class);
-        List<Element<Recital>> recitals = mapper.convertValue(caseData.get("recitals"), new TypeReference<>() {});
+    public CaseManagementOrder prepareCMO(CaseData caseData) {
+        Optional<CaseManagementOrder> oldCMO = Optional.ofNullable(caseData.getCaseManagementOrder());
+        Optional<DynamicList> cmoHearingDateList = Optional.ofNullable(caseData.getCmoHearingDateList());
 
         return CaseManagementOrder.builder()
-            .hearingDate(list.getValue().getLabel())
-            .id(list.getValue().getCode())
-            .directions(combineAllDirectionsForCMO(mapper.convertValue(caseData, CaseData.class)))
-            .schedule(schedule)
-            .recitals(recitals)
-            .cmoStatus(cmoStatus)
+            .hearingDate(cmoHearingDateList.map(DynamicList::getValueLabel).orElse(null))
+            .id(cmoHearingDateList.map(DynamicList::getValueCode).orElse(null))
+            .directions(combineAllDirectionsForCmo(caseData))
+            .schedule(caseData.getSchedule())
+            .recitals(caseData.getRecitals())
+            .status(oldCMO.map(CaseManagementOrder::getStatus).orElse(null))
+            .orderDoc(oldCMO.map(CaseManagementOrder::getOrderDoc).orElse(null))
             .build();
     }
 
-    public void prepareCaseDetails(Map<String, Object> caseData, CaseManagementOrder caseManagementOrder) {
-        final ImmutableSet<String> keysToRemove = ImmutableSet.of(
+    public void removeTransientObjectsFromCaseData(Map<String, Object> caseData) {
+        final Set<String> keysToRemove = Set.of(
             "cmoHearingDateList",
             "schedule",
-            "reviewCaseManagementOrder",
             "recitals");
 
         keysToRemove.forEach(caseData::remove);
+    }
 
-        caseData.put("caseManagementOrder", caseManagementOrder);
-
-        switch (caseManagementOrder.getCmoStatus()) {
+    public void populateCaseDataWithCMO(Map<String, Object> caseData, CaseManagementOrder caseManagementOrder) {
+        switch (caseManagementOrder.getStatus()) {
             case SEND_TO_JUDGE:
                 // Does the same as PARTIES_REVIEW for now but in the future this will change
             case PARTIES_REVIEW:
-                caseData.put("shareableCMO", caseManagementOrder);
+                caseData.put("sharedDraftCMODocument", caseManagementOrder.getOrderDoc());
                 break;
             case SELF_REVIEW:
-                caseData.remove("shareableCMO");
+                caseData.remove("sharedDraftCMODocument");
                 break;
             default:
                 break;
         }
-    }
 
-    public void removeExistingCustomDirections(Map<String, Object> caseData) {
-        caseData.remove("allPartiesCustom");
-        caseData.remove("localAuthorityDirectionsCustom");
-        caseData.remove("cafcassDirectionsCustom");
-        caseData.remove("courtDirectionsCustom");
+        caseData.put("caseManagementOrder", caseManagementOrder);
     }
 
     public DynamicList buildDynamicListFromHearingDetails(List<Element<HearingBooking>> hearingDetails) {
@@ -140,6 +125,61 @@ public class DraftCMOService {
         return hearingDatesDynamic;
     }
 
+    public String createRespondentAssigneeDropdownKey(List<Element<Respondent>> respondents) {
+        StringBuilder stringBuilder = new StringBuilder();
+
+        for (int i = 0; i < respondents.size(); i++) {
+            RespondentParty respondentParty = respondents.get(i).getValue().getParty();
+
+            String key = String.format("Respondent %d - %s", i + 1, respondentParty.getFullName());
+            stringBuilder.append(key).append("\n\n");
+        }
+
+        return stringBuilder.toString().stripTrailing();
+    }
+
+    public String createOtherPartiesAssigneeDropdownKey(Others others) {
+        StringBuilder stringBuilder = new StringBuilder();
+
+        if (isNotEmpty(others)) {
+            for (int i = 0; i < others.getAllOthers().size(); i++) {
+                Other other = others.getAllOthers().get(i);
+                String key;
+
+                if (i == 0) {
+                    key = String.format("Person 1 - %s", defaultIfNull(other.getName(), EMPTY_PLACEHOLDER));
+                } else {
+                    key = String.format("Other person %d - %s", i,
+                        defaultIfNull(other.getName(), EMPTY_PLACEHOLDER));
+                }
+
+                stringBuilder.append(key).append("\n\n");
+            }
+        }
+
+        return stringBuilder.toString().stripTrailing();
+    }
+
+    public void prepareCustomDirections(Map<String, Object> data) {
+        CaseData caseData = mapper.convertValue(data, CaseData.class);
+
+        if (!isNull(caseData.getCaseManagementOrder())) {
+            directionHelperService.sortDirectionsByAssignee(caseData.getCaseManagementOrder().getDirections())
+                .forEach((key, value) -> data.put(key.getValue(), value));
+        } else {
+            removeExistingCustomDirections(data);
+        }
+    }
+
+    private void removeExistingCustomDirections(Map<String, Object> caseData) {
+        caseData.remove("allPartiesCustom");
+        caseData.remove("localAuthorityDirectionsCustom");
+        caseData.remove("cafcassDirectionsCustom");
+        caseData.remove("courtDirectionsCustom");
+        caseData.remove("respondentDirectionsCustom");
+        caseData.remove("otherPartiesDirectionsCustom");
+    }
+
     private void prePopulateHearingDateSelection(List<Element<HearingBooking>> hearingDetails,
                                                  DynamicList hearingDatesDynamic,
                                                  CaseManagementOrder caseManagementOrder) {
@@ -160,12 +200,7 @@ public class DraftCMOService {
         hearingDatesDynamic.setValue(listElement);
     }
 
-    private String formatLocalDateToMediumStyle(LocalDate date) {
-        return dateFormatterService.formatLocalDateToString(date, FormatStyle.MEDIUM);
-    }
-
-    // Temporary, to be replaced by directionHelperService.combineAllDirections once all directions have been added
-    private List<Element<Direction>> combineAllDirectionsForCMO(CaseData caseData) {
+    private List<Element<Direction>> combineAllDirectionsForCmo(CaseData caseData) {
         List<Element<Direction>> directions = new ArrayList<>();
 
         directions.addAll(directionHelperService.assignCustomDirections(caseData.getAllPartiesCustom(), ALL_PARTIES));
@@ -173,11 +208,37 @@ public class DraftCMOService {
         directions.addAll(directionHelperService.assignCustomDirections(caseData.getLocalAuthorityDirectionsCustom(),
             LOCAL_AUTHORITY));
 
+        directions.addAll(orderByParentsAndRespondentAssignee(directionHelperService.assignCustomDirections(
+            caseData.getRespondentDirectionsCustom(), PARENTS_AND_RESPONDENTS)));
+
         directions.addAll(directionHelperService.assignCustomDirections(caseData.getCafcassDirectionsCustom(),
             CAFCASS));
+
+        directions.addAll(orderByOtherPartiesAssignee(directionHelperService.assignCustomDirections(
+            caseData.getOtherPartiesDirectionsCustom(), OTHERS)));
 
         directions.addAll(directionHelperService.assignCustomDirections(caseData.getCourtDirectionsCustom(), COURT));
 
         return directions;
+    }
+
+    private List<Element<Direction>> orderByParentsAndRespondentAssignee(List<Element<Direction>> directions) {
+        directions.sort(Comparator.comparingInt(direction -> direction.getValue()
+            .getParentsAndRespondentsAssignee()
+            .ordinal()));
+
+        return directions;
+    }
+
+    private List<Element<Direction>> orderByOtherPartiesAssignee(List<Element<Direction>> directions) {
+        directions.sort(Comparator.comparingInt(direction -> direction.getValue()
+            .getOtherPartiesAssignee()
+            .ordinal()));
+
+        return directions;
+    }
+
+    private String formatLocalDateToMediumStyle(LocalDate date) {
+        return dateFormatterService.formatLocalDateToString(date, FormatStyle.MEDIUM);
     }
 }
